# expense-tracker

./: README.md  pyproject.toml
database/: expenses.json
src/expense_tracker/: cli.py  core.py  parser.py  storage.py  table.py
