[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "A simple CLI tool to track your expenses"
authors = ["ahoramismo <holanumdo@kakao.com>"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "expense_tracker", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.32.3"

[tool.poetry.scripts]
expense-tracker = "expense_tracker.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
